[package]
name = "solana-client-wasm"
version = "2.2.3" # mirror solana-sdk version
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[features]
pubsub = ["web-sys/MessageEvent", "web-sys/WebSocket", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1.0"
solana-account = "2.2"
solana-account-decoder-client-types = "2.2"
solana-clock = "2.2"
solana-commitment-config = "2.2"
solana-epoch-info = { version = "2.2", features = ["serde"] }
solana-epoch-schedule = {version = "2.2", features = ["serde"] }
solana-hash = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-rpc-client-api = "2.2"
solana-signature = "2.2"
solana-transaction = {version = "2.2", features = ["bincode"] }
solana-transaction-error = "2.2"
solana-transaction-status-client-types = "2.2"
solana-version = "2.2"
thiserror = "2.0"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["AbortController", "MessageEvent", "WebSocket"] }
tokio = { version = "1.44", features = ["time"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.38"